--- a/_pages/404.html
+++ b/_pages/404.html
@@ -21,5 +21,5 @@ search_exclude: true
 <div class="container">
   <h1>404</h1>
   <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p>Few things just don't exist.</p>
 </div>
