deploy: c84f381dcb5731862e2f360837cbb7d198697fe8

--- a/404.html
+++ b/404.html
@@ -83,7 +83,7 @@ window.onload = wrap_img;
 <div class="container">
   <h1>404</h1>
   <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p>Few things just don't exist.</p>
 </div>
 
       </div>
